--- a/src/app/core/pages/add-handbook/add-handbook.component.html
+++ b/src/app/core/pages/add-handbook/add-handbook.component.html
@@ -19,7 +19,7 @@
     </div>
     <div content>
       <app-sidebar [links]="sidebarMenu" appAuthUser>
-        <div content class="h-full" style="border: 1px solid red;height: 29em">
+        <div content class="h-full">
           heheh
         </div>
       </app-sidebar>
